--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello GIT!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis minus expedita at quis odio reprehenderit, voluptatibus vel nobis optio ducimus.</p>
 </body>
 </html>
